--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "consign": "^0.1.6",
+    "cpf-cnpj-validator": "^0.1.0",
     "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.11"
+    "mongoose": "^5.8.11",
+    "mongoose-double": "0.0.1",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " node src/index.js"
+    "start": " nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
